--- a/custom_addons/adt_invoice_list_custom/views/account_move_inherit.xml
+++ b/custom_addons/adt_invoice_list_custom/views/account_move_inherit.xml
@@ -7,8 +7,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//list" position="inside">
                     <field name="invoice_user_id" string="Nhân viên bán hàng" />
-                    <field name="invoice_date" string="Ngày thanh toán" />
-                    <field name="partner_bank_id" string="Ngân hàng" />
+                    <field name="payment_date_display" string="Ngày thanh toán" />
+                    <field name="recipient_bank_account_display" string="Ngân hàng nhận" />
                     <field name="amount_paid" widget="monetary" string="Số tiền đã thu" />
                     <field name="amount_residual" widget="monetary" string="Số tiền phải thu" />
                 </xpath>
